

cc_binary(
    name = "Simple_Pendulum",
    srcs = ["simple_pendulum_plant.cc"],
    data = ["pendulum.sdf"],
    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
cc_binary(
    name = "Pendulum_MultiBody",
    srcs=["simple_pendulum_plant.cc"],
    data = ["pendulum.sdf"],
    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
cc_binary(
    name = "Monoped_MultiBody",
    srcs=["monoped_plant.cc"],
    data = ["monoped.urdf",
             "hipassembly.dae",
             "upperleg.dae",
             "lowerleg.dae"],

    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
