
package(default_visibility = ["//visibility:public"])
cc_binary(
    name = "Simple_Pendulum",
    srcs = ["simple_pendulum_plant.cc"],
    data = ["pendulum.sdf"],
    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
cc_binary(
    name = "Pendulum_MultiBody",
    srcs=["simple_pendulum_plant.cc"],
    data = ["pendulum.sdf"],
    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
cc_binary(
    name = "Monoped_MultiBody",
    srcs=["monoped_plant.cc"],
    data = [":models",
            ":models/package.xml",
             "//tools:drake_visualizer",
    ],

    deps = [
        "//systems/analysis",
        "//systems/framework",
        "//systems/primitives",
        "//common",
        "//multibody/parsing",
        "//multibody/plant",
        "//multibody/tree",
        "//geometry",
        "@sdformat",

    ],
)
